# Gazebo-related-files

./: README.md  ReadMe.md  package.xml  setup.py
config/: joystick.yaml  params.yaml
install/: local_setup.sh  setup.sh
install/rogue/share/ament_index/resource_index/package_run_dependencies/: rogue
install/rogue/share/ament_index/resource_index/parent_prefix_path/: rogue
install/rogue/share/rogue/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rogue/share/rogue/bringup/config/: gazebo_controllers.yaml  rogue_controllers.yaml
install/rogue/share/rogue/bringup/launch/: rogue.launch.py  rsp.launch.py
install/rogue/share/rogue/cmake/: rogueConfig-version.cmake  rogueConfig.cmake
install/rogue/share/rogue/description/: .gitkeep
install/rogue/share/rogue/description/meshes/: Driving_Front_Left_Link.stl  Driving_Front_Right_Link.stl  Driving_Left_Link.stl  Driving_Right_Link.stl  Steering_Front_Left_Link.stl  Steering_Front_Right_Link.stl  base_link.stl
install/rogue/share/rogue/description/meshes/mm/: Driving.stl  Steering.stl  rover.stl
install/rogue/share/rogue/description/ros2_control/: ackermann.xacro  gazebo_control.xacro
install/rogue/share/rogue/description/rviz/: rogue_config.rviz  rogue_config2.rviz
install/rogue/share/rogue/description/urdf/: rogue.sdf  rogue.urdf.xacro  rogue_des.urdf  rogue_des.xacro
install/rogue/share/rogue/description/worlds/: empty.world
install/rogue/share/rogue/environment/: ament_prefix_path.dsv  path.dsv
install/rogue/share/rogue/hardware/: ackermann_steering_controller.cpp  odometry.cpp  speed_limiter.cpp
install/rogue/share/rogue/hardware/include/ackermann_steering_controller/: ackermann_steering_controller.hpp  odometry.hpp  rolling_mean_accumulator.hpp  speed_limiter.hpp  visibility_control.h
launch/: joystick.launch.py  motor.launch.py
log/: latest_build
motor_control/: run_motor.py  steer_motor.py  test_motor.py
nanolib_motor_tests/: README.md  nanolib_helper.py  test_motors.py
rogue/bringup/launch/: rogue.launch.py
sirius_driver/: CMakeLists.txt  package.xml
sirius_driver/config/: CL3-E-2-0F.eds  PD4-C5918M4204-E-08.eds  PD4-CB59M024035-E-08.eds  can0.yaml  drive.yaml  driver.yaml  driver1.yaml  driver_1.yaml  driver_control.yaml  driver_controller.yaml  driver_test.yaml
sirius_driver/launch/: robot.launch  robotdemo.launch
sirius_driver/urdf/: model.urdf  orthos.gv  sirius.xacro
sirius_driver/urdf/modules/: orthos_base.xacro  orthos_camera_mast.xacro  orthos_differential.xacro  orthos_mounting_plate.xacro  orthos_rocker_bogie_left.xacro  orthos_rocker_bogie_right.xacro
src/rogue/: CMakeLists.txt  package.xml  rogue.xml
src/rogue/bringup/config/: gazebo_controllers.yaml  rogue_controllers.yaml
src/rogue/bringup/launch/: rogue.launch.py  rsp.launch.py
src/rogue/description/meshes/: Driving_Front_Left_Link.stl  Driving_Front_Right_Link.stl  Driving_Left_Link.stl  Driving_Right_Link.stl  Steering_Front_Left_Link.stl  Steering_Front_Right_Link.stl  base_link.stl
src/rogue/description/meshes/mm/: Steering.stl  rover.stl
src/rogue/description/ros2_control/: ackermann.xacro  gazebo_control.xacro
src/rogue/description/rviz/: rogue_config.rviz  rogue_config2.rviz
src/rogue/description/urdf/: rogue.sdf  rogue.urdf.xacro  rogue_des.urdf  rogue_des.xacro
src/rogue/hardware/: ackermann_steering_controller.cpp  odometry.cpp  speed_limiter.cpp
src/rogue/hardware/include/ackermann_steering_controller/: ackermann_steering_controller.hpp  odometry.hpp
